--- a/EverLight.WebModul/Views/Home/CreateOrder.cshtml
+++ b/EverLight.WebModul/Views/Home/CreateOrder.cshtml
@@ -1,5 +1,6 @@
 ﻿
 <div class="text-center">
     <br /><br /><br /><br />
-    <h1 class="display-4">A bejelentését rögzítettük! A következő sorszámmal: @ViewData["ordernumber"]?.ToString()  </h1>
+    <h1 class="display-4">A hibabejelentését rögzítettük! Köszönjük. </h1>
+    <h4 class="display-7">A következő sorszámmal: @ViewData["ordernumber"]?.ToString()  </h4>
 </div>
